Changelog Legend:
-----------------

[+] = Added
[*] = Changed
[^] = Moved
[x] = Deleted
[!] = Bugs

(07/01/15) - Improvements - Version 0.0.7

[!] - Fixed header image crop issue

(03/15/14) - Improvements - Version 0.0.6

[*] - Updated translations
[!] - Fixed code on 404.php

(02/04/14) - Improvements - Version 0.0.5

[*] - Change check if file is called directly.
[+] - Added check for pro feature plugin.
[+] - Add post password form css.
[!] - Fixed page title option issue.
[!] - Fixed custom css issue.
[+] - Added new plugin suggestion.


(12/28/14) - Improvements - Version 0.0.4

[!] Fix issues with IE code
[!] Initiate FitVids correctly
[!] Fix search button alignment in FF
[*] Only minify js and not concentrate
[*] Allow mobile menu to opened by clicking on the whole bar
[*] Reduce padding of #featured-content on smaller screens
[*] Readd blog templates
[+] Add class to home widget titles
[+] Add featured image to single posts

-----

(11/15/14) - Improvements - Version 0.0.3

[*] Escape variables in meta box class
[*] Change default value of front page
[*] Prefixed all variables with responsive_mobile_
[*] Escape featured content & allow image to be replaced in child theme
[x] Removed show_field_repeater()
[x] Removed blog templates
[x] Removed unneded code

-----

(11/01/14) - Improvements - Version 0.0.2

[*] Activate responsive_mobile_upgrade_bar
[*] Use the filter stylesheet_uri
[x] Removed duplicate WooCommerce support
[x] Removed 3.4 compatability

-----

(09/15/14) - Initial Release - Version 0.0.1

[+] Initial Release