@@ -21,7 +21,18 @@ if ( ! defined( 'WPINC' ) ) {
 
 <article id="post-<?php the_ID(); ?>" <?php post_class(); ?>>
 	<?php responsive_mobile_entry_top(); ?>
-	<?php get_template_part( 'template-parts/post-meta-page' ); ?>
+	
+	<?php get_template_part( 'template-parts/post-meta-page' ); 
+
+	// Added filter to get featured_image option working.
+	$featured_image = apply_filters( 'responsive_mobile_featured_image', '1' );
+	if ( has_post_thumbnail() && $featured_image ) {
+		?>
+		<div class="page-feature-image">
+			<?php the_post_thumbnail(); ?>
+		</div>
+		<?php
+	} ?>
 
 	<div class="post-entry">
 		<?php the_content(); ?>
